# 42_a_maze_ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  activate_venv.md  config.txt  ejm.py  generator_day3_dcasado.py  pyproject.toml  requirements.txt  teoria_aprender.md
dcasado/: a_maze_ing-0.1.0-py3-none-any.whl  a_maze_ing.py  generator.py
display/: __init__.py  graphical.py
docs/: TECHNICAL_GUIDE.md  activate_venv.md  delivery_guide.md  differentes_cases_config.txt  execution_whl.md  mlx_setup.md
docs/ES/: GUIA_ENTREGA.md  GUIA_TECNICA.md  README.md
mazegen/: __init__.py  generator.py  solver.py  utils.py
mlx_source/test/: mlxtest.py  simple_test.py
test_suite_extra/: activate_venv.md  project_division.md
tests/: test_window.py
