[build-system]
requires = [“setuptools>=61.0”, “wheel”]
build-backend = “setuptools.build_meta”

[project]
name = “mazegen”
version = “1.0.0”
description = “Generator and solver for mazes with pattern 42”
readme = “README.md”
requires-python = “>=3.10”

authors = [
    {name = "serromer", email = "serromer@student.42madrid.com"},
    {name = "dcasado-", email = "dcasado-@student.42madrid.com"}
]

# If you use external MLX, sometimes it is not put here, but if you use ‘numpy’ or others
dependencies = []

classifiers = [
    “Programming Language :: Python :: 3”,
    “Operating System :: OS Independent”,
]

[tool.setuptools.packages.find]
where = [“.”]
include = [“mazegen*”, “display*”]
[project.scripts]
# This allows you to run ‘a-maze-ing’ from anywhere after installing it
a-maze-ing = “a_maze_ing:main”
