[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Generator and solver for mazes with pattern 42"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "serromer", email = "serromer@student.42madrid.com"},
    {name = "dcasado-", email = "dcasado-@student.42madrid.com"}
]
dependencies = []

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*", "display*"]

[project.scripts]
a-maze-ing = "a_maze_ing:main"

# --- LINTERS CONFIGURATION ---
[tool.mypy]
# Compatible with Python 3.8+ on clusters
python_version = "3.9"
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "mlx_source"]

[[tool.mypy.overrides]]
# Permanently mute the mlx_source folder
module = "mlx_source.*"
ignore_errors = true

[tool.flake8]
exclude = ["venv", ".venv", "mlx_source", "build", "dist"]
max-line-length = 88